--- a/translation/messaging-guide-en.txt
+++ b/translation/messaging-guide-en.txt
@@ -142,7 +142,7 @@ To unsubscribe from a subscribed forum, click ‘Settings’ and then ‘unsubsc
 Share the web address of your forum with your group.  You can find this quickly on atomjump.com by tapping the 'share' icon in the top right hand corner of the underlying page. Each individual can then choose to become a forum subscriber to get ongoing notifications.
 
 ## To Set up a Private Group
-On atomjump.org, you can enter a group name, and tap the bottom entry ‘Create a private group’. This will automatically fill in an email for us. Please replace the group password before sending the email. On AtomJump․com, this costs $US 10 / year, and you can sign up on <a href="https://atomjump.com/wp/introduction/">this page</a>. On other forums, you should contact your system administrator to add a forum password.
+On AtomJump.com, you can enter a group name, and tap the bottom entry ‘Create a private group’. This will automatically fill in your group name for us, or you can sign up directly on <a href="https://atomjump.com/wp/introduction/">this page</a>. On AtomJump․com, this costs $US 10 / year. On other forums, you should contact your system administrator to add a forum password.
 
 Note: this forum password is different from your personal password and should be one that you can email to every member of the group comfortably.
 
